--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -1,9 +1,48 @@
 #home{
     display: flex;
-    height: 40%;
+    /* padding: 2%; */
     width: 100%;
-   
+    justify-content: space-between;
     background-color: orange;
     top:30px;
     /* padding: 0px; */
+    font-family: 'Poppins', sans-serif;
 }
+
+#paragraph{
+    padding-top: 15%;
+}
+
+#veg-cake{
+       width: 70%;
+}
+
+img{
+    height: max-content;
+    width: 110%
+}
+
+.waviy {
+    background-color: aquamarine;
+    position: relative;
+    -webkit-box-reflect: below -20px linear-gradient(transparent, rgba(0,0,0,.2));
+    font-size: 60px;
+  }
+  .waviy span {
+    
+    position: relative;
+    display: inline-block;
+    color: #fff;
+    text-transform: uppercase;
+    animation: waviy 1s infinite;
+    /* animation-delay: calc(.1s * var(--i)); */
+    
+  }
+  @keyframes waviy {
+    0%,40%,100% {
+      transform: translateY(0)
+    }
+    20% {
+      transform: translateY(-20px)
+    }
+  }
