--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,17 @@
 html{
-  height: 100%;
-  border-style: solid;
+  /* height: 100%; */
+  
   font-family: 'Poppins', sans-serif;
 }
 
 body{
   background-color: #d9e4f5;
-  background-image: linear-gradient(315deg, #d9e4f5 0%, #f5e3e6 74%);;
-  height: 100%;
-  padding: 0%;
-  border-style: solid;
-  border-color: black;
-  border-width: 4px;
+  /* background-image: linear-gradient(315deg, #d9e4f5 0%, #f5e3e6 74%);; */
+  /* height: 100%; */
+  /* margin: 0%; */
+  /* padding: 0%; */
+  /* border-style: solid; */
+  /* border-color: black; */
+  /* border-width: 4px; */
 }
 
